# ros2_info

./: LICENSE  README.md
install/: local_setup.sh  setup.sh
install/ros2_info/lib/ros2_info/: ros2_info
install/ros2_info/share/ros2_info/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/ros2_fastfetch/: package.xml  setup.cfg  setup.py
src/ros2_fastfetch/fetch_info/: package.xml  setup.cfg  web.py
src/ros2_fastfetch/fetch_info/collector/: ros2.py
src/ros2_fastfetch/fetch_info/display/: themes.py
src/ros2_fastfetch/fetch_info/templates/: index.html
