<?xml version="1.0"?>
<package format="3">
  <name>ros2_info</name>
  <version>1.0.0</version>
  <description>Fastfetch-like system info tool for ROS2 with Web UI</description>
  <maintainer email="080bei018@ioepc.edu.np.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>python3-click</exec_depend>
  <exec_depend>python3-rich</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-flask</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
